# Restation

./: .gitignore  Readme.md
.gitlab/issue_templates/: SC-FIT-Issue.md
Data/: 1x-amd-ryzen-4000-5-1400MHz.txt  1x-amd-ryzen-4000-5-1700MHz.txt  1x-amd-ryzen-4000-5-3000MHz.txt  1x-intel-i5-2520-0790MHz.txt  1x-intel-i5-2520-1400MHz.txt  1x-intel-i5-2520-1700MHz.txt  1x-intel-i5-2520-1790MHz.txt  1x-intel-i5-2520-2500MHz.txt  1x-intel-i5-2520-3000MHz.txt  2x-amd-ryzen-4000-5-1400MHz.txt  2x-amd-ryzen-4000-5-1700MHz.txt  2x-amd-ryzen-4000-5-3000MHz.txt  2x-intel-i5-2520-1400MHz.txt  2x-intel-i5-2520-1700MHz.txt  2x-intel-i5-2520-3000MHz.txt
Sources/: CMakeLists.txt  Dockerfile  header_template.txt
Sources/app/: App.cpp  App.hpp  EmulatorApp.cpp  EmulatorApp.hpp  Input.cpp  Input.hpp  Menu.cpp  Menu.hpp  MenuTypes.hpp  main.cpp
Sources/cmake/: TC-mingw.cmake
Sources/core/: Bus.cpp  Bus.hpp  CDROM.cpp  CDROM.hpp  CDROMConstants.hpp  CDROMInstruction.hpp  CDROMTypes.hpp  CMakeLists.txt  CPU.cpp  CPU.hpp  CPUDisassembler.cpp  CPUDisassembler.hpp  CPUInstruction.hpp  CPUTypes.hpp  CacheController.cpp  CacheController.hpp  Component.hpp  Constants.hpp  DMAChannel.cpp  DMAChannel.hpp  DMAChannelCDROM.cpp  DMAChannelCDROM.hpp  DMAChannelGPU.cpp  DMAChannelGPU.hpp  DMAChannelMDECIN.cpp  DMAChannelMDECIN.hpp  DMAChannelMDECOUT.cpp  DMAChannelMDECOUT.hpp  DMAChannelOTC.cpp  DMAChannelOTC.hpp  DMAChannelPIO.cpp  DMAChannelPIO.hpp  DMAChannelSPU.cpp  DMAChannelSPU.hpp  DMAController.cpp  DMAController.hpp  DMATypes.hpp  Disc.cpp  Disc.hpp  DiscConstants.hpp  (+53 more)
Sources/perf/: gen-plots.py
Sources/src/: Bus.cpp  Bus.hpp  CDROM.cpp  CDROM.hpp  CDROMConstants.hpp  CDROMInstruction.hpp  CPU.cpp  CPU.hpp  CPUDisassembler.cpp  CPUInstruction.hpp  CacheController.cpp  CacheController.hpp  Component.hpp  Constants.hpp  DMAChannel.cpp  DMAChannel.hpp  DMAChannelCDROM.cpp  DMAChannelCDROM.hpp  DMAChannelGPU.cpp  DMAChannelGPU.hpp  DMAChannelMDECIN.cpp  DMAChannelMDECIN.hpp  DMAChannelMDECOUT.cpp  DMAChannelMDECOUT.hpp  DMAChannelOTC.cpp  DMAChannelOTC.hpp  DMAChannelPIO.hpp  DMAChannelSPU.cpp  DMAChannelSPU.hpp  DMAController.cpp  DMAController.hpp  DMATypes.hpp  Disc.cpp  Disc.hpp  DiscTypes.hpp  ExceptionController.cpp  ExceptionController.hpp  Forward.hpp  GPU.cpp  GPU.hpp  (+28 more)
Thesis/DP-Presentation/: fitthesispresn.cls  prezentace.tex  slides_cz.tex
Thesis/DP-Thesis/: doc-01-intro.tex  doc-02-playstation.tex  doc-03-architecture.tex  doc-04-0-components.tex  doc-04-5-frontend.tex  doc-05-0-bios.tex  doc-05-5-perf.tex  doc-06-end.tex  doc-07-bib.bib  doc-08-appendices.tex  fitthesis.cls  projekt.tex
Thesis/SP/: doc-01-intro.tex  doc-02-playstation.tex  doc-03-architecture.tex  doc-04-components.tex  doc-05-bios.tex  doc-06-end-imp.tex  doc-06-end.tex
Thesis/SP-Presentation/: Makefile  prezentace.aux  slides_cz.tex
Thesis/SP-Thesis/: doc-01-intro-imp.tex  doc-02-playstation-imp.tex  doc-03-architecture-imp.tex  doc-04-components-imp.tex  doc-05-bios-imp.tex  doc-07-bib.bib  projekt.aux  projekt.bbl  projekt.blg  projekt.lof  projekt.out  projekt.ptc  projekt.tex  projekt.toc
